<resources>
    <string name="app_name">All Friends Studio</string>
    <string name="contact_number">Contact Number</string>
    <string name="uesr_bio">Uesr Bio</string>
    <string name="username">UserName</string>
    <string name="email_address">Email Address</string>
    <string name="last_seen">Last seen</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="search_bar">Search Bar</string>
    <string name="friends_list">Friends List</string>
    <string name="enter_username">Search Username</string>
</resources>