<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/user_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/user_bio_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/uesr_bio"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/user_contact_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_bio_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/contact_number"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/user_email_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_contact_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/email_address"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/user_last_seen_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_email_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/last_seen"
            android:textAlignment="center"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_last_seen_text_view"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/user_first_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/first_name"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/user_last_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/last_name"
                android:textAlignment="center"
                android:textSize="22sp" />

        </LinearLayout>

        <Button
            android:id="@+id/friends_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/friends_list"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


    </RelativeLayout>

</layout>